fix(Switch): add vertical-align middle, close #2383

--- a/src/switch/main.scss
+++ b/src/switch/main.scss
@@ -12,6 +12,7 @@
     transition: all $motion-duration-immediately $motion-linear;
     overflow: hidden;
     cursor: pointer;
+    vertical-align: middle;
 
     &:after {
         content: " ";
